working system